update tools page

--- a/tools/containers/index.html
+++ b/tools/containers/index.html
@@ -1,12 +1,12 @@
 ---
 layout: page
-title: 'Data Specifications'
+title: 'Containers'
 ---
-<h1>Data Specifications</h1>
-<p>These are the open source data specifications that I am tracking on as part of my research, and can be used as part of the API life cycle.</p>
+<h1>API Deployment in Containers</h1>
+<p>These are the containerized API deployment solutions that I am tracking on as part of my research, and can be used as part of the API life cycle.</p>
 <table width="100%" border="0">
   {% for tool in site.data.tools %}
-    {% if tool.tags contains 'Data Specifications' %}
+    {% if tool.tags contains 'Media Type' %}
     <tr>
       <td align="center" valign="middle" width="160">
         <a href="{{ tool.url }}"><img src="{{ tool.logo }}" width="150" align="left" style="padding: 15px;" /></a>
