--- a/tools/mock/index.html
+++ b/tools/mock/index.html
@@ -1,12 +1,12 @@
 ---
 layout: page
-title: 'API Specifications Formats'
+title: 'Mock API Deployment'
 ---
-<h1>API Specifications Formats</h1>
-<p>These are the open source API specification formats that I am tracking on as part of my research, and can be used as part of the API life cycle.</p>
+<h1>Mock API Deployment</h1>
+<p>These are the mock API deployment solutions that I am tracking on as part of my research, and can be used as part of the API life cycle.</p>
 <table width="100%" border="0">
   {% for tool in site.data.tools %}
-    {% if tool.tags contains 'Specification' %}
+    {% if tool.tags contains 'Mock' %}
     <tr>
       <td align="center" valign="middle" width="160">
         <a href="{{ tool.url }}"><img src="{{ tool.logo }}" width="150" align="left" style="padding: 15px;" /></a>
