--- a/tools/search/index.html
+++ b/tools/search/index.html
@@ -1,12 +1,12 @@
 ---
 layout: page
-title: 'API Definition Parsers'
+title: 'Search API Deployment'
 ---
-<h1>API Definition Parsers</h1>
-<p>These are the API definition parsers that I am tracking on as part of my research, and can be used as part of the API life cycle.</p>
+<h1>Search API Deployment</h1>
+<p>These are the search focused API deployment solutions that I am tracking on as part of my research, and can be used as part of the API life cycle.</p>
 <table width="100%" border="0">
   {% for tool in site.data.tools %}
-    {% if tool.tags contains 'Parser' %}
+    {% if tool.tags contains 'Search' %}
     <tr>
       <td align="center" valign="middle" width="160">
         <a href="{{ tool.url }}"><img src="{{ tool.logo }}" width="150" align="left" style="padding: 15px;" /></a>
