--- a/tools/frameworks/index.html
+++ b/tools/frameworks/index.html
@@ -1,12 +1,12 @@
 ---
 layout: page
-title: 'Semantics'
+title: 'API Deployment Frameworks'
 ---
-<h1>Semantics</h1>
-<p>These are the semantics that I am tracking on as part of my research, and can be used as part of the API life cycle.</p>
+<h1>API Deployment Frameworks</h1>
+<p>These are the open source API deployment frameworks that I am tracking on as part of my research, and can be used as part of the API life cycle.</p>
 <table width="100%" border="0">
   {% for tool in site.data.tools %}
-    {% if tool.tags contains 'Semantics' %}
+    {% if tool.tags contains 'Frameworks' %}
     <tr>
       <td align="center" valign="middle" width="160">
         <a href="{{ tool.url }}"><img src="{{ tool.logo }}" width="150" align="left" style="padding: 15px;" /></a>
