--- a/tools/index.html
+++ b/tools/index.html
@@ -7,73 +7,77 @@ layout: page
 <table width="90%" border="0" align="center" cellpadding="5">
     <tr>
       <td align="center" valign="middle" height="100" width="25%">
-        <p><a href="specifications/"><img src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-api-specification.png" width="130" /></a></p>
+        <p><a href="database/"><img src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-database-new.png" width="130" /></a></p>
       </td>
       <td align="center" valign="middle" width="25%">
-        <p><a href="data-specifications/"><img src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-data-specification.png" width="100" /></a></p>
+        <p><a href="frameworks/"><img src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-framework.png" width="100" /></a></p>
       </td>
       <td align="center" valign="middle" width="25%">
-        <p><a href="media-types/"><img src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-content-type.png" width="120" /></a></p>
+        <p><a href="microservices/"><img src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-microservice.png" width="120" /></a></p>
       </td>
       <td align="center" valign="middle" width="25%">
-        <p><a href="generators/"><img src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-general-gear.png" width="100" /></a></p>
+        <p><a href="real-time/"><img src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-real-time.png" width="100" /></a></p>
       </td>
     </tr>
     <tr>
       <td align="center" valign="top">
-        <p><a href="definition-formats/"><strong>Specifications</strong></a></p>
+        <p><a href="database/"><strong>Database</strong></a></p>
       </td>
       <td align="center" valign="top">
-        <p><a href="design-guides/"><strong>Data Specifications</strong></a></p>
+        <p><a href="frameworks/"><strong>Framework</strong></a></p>
       </td>
       <td align="center" valign="top">
-        <p><a href="design-editors/"><strong>Media Type</strong></a></p>
+        <p><a href="microservices/"><strong>Microservices</strong></a></p>
       </td>
       <td align="center" valign="top">
-        <p><a href="design-notebooks/"><strong>Generator</strong></a></p>
+        <p><a href="real-time/"><strong>Real Time</strong></a></p>
       </td>
     </tr>
     <tr>
       <td align="center" valign="middle" width="25%">
-        <p><a href="parsers/"><img src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-parser.png" width="100" /></a></p>
+        <p><a href="containers/"><img src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-shipping-container.png" width="100" /></a></p>
       </td>
       <td align="center" valign="middle" width="25%">
-        <p><a href="converters/"><img src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-converter.png" width="100" /></a></p>
+        <p><a href="search/"><img src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-search.png" width="100" /></a></p>
       </td>
       <td align="center" valign="middle" width="25%">
-        <p><a href="semantics/"><img src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-semantics.png" width="100" /></a></p>
+        <p><a href="mock/"><img src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-mock-interface.png" width="100" /></a></p>
       </td>
       <td align="center" valign="middle" width="25%">
-        <p><a href="discovery/"><img src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-api-discovery.png" width="100" /></a></p>
+        <p><a href="serverless/"><img src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-serverless.png" width="100" /></a></p>
       </td>
     </tr>
     <tr>
       <td align="center" valign="top">
-        <p><a href="ide-plugins/"><strong>Parser</strong></a></p>
+        <p><a href="containers/"><strong>Containers</strong></a></p>
       </td>
       <td align="center" valign="top">
-        <p><a href="hypermedia/"><strong>Converter</strong></a></p>
+        <p><a href="search/"><strong>Search</strong></a></p>
       </td>
       <td align="center" valign="top">
-        <p><a href="media-type/"><strong>Semantics</strong></a></p>
+        <p><a href="mock/"><strong>Mock</strong></a></p>
       </td>
       <td align="center" valign="top">
-        <p><a href="media-type/"><strong>Discovery</strong></a></p>
+        <p><a href="serverless/"><strong>Serverless</strong></a></p>
       </td>
     </tr>
     <tr>
       <td align="center" valign="middle" width="25%">
-        <p><a href="merging/"><img src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-merge.png" width="100" /></a></p>
+        <p><a href="connectors/"><img src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-connector.png" width="100" /></a></p>
       </td>
-      <td align="center" valign="middle" width="25%"></td>
+      <td align="center" valign="middle" width="25%">
+        <p><a href="internet-of-things/"><img src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-internet-of-things.png" width="100" /></a></p>
+      </td>
       <td align="center" valign="middle" width="25%"></td>
       <td align="center" valign="middle" width="25%">  </td>
     </tr>
     <tr>
       <td align="center" valign="top">
-        <p><a href="ide-plugins/"><strong>Merging</strong></a></p>
+        <p><a href="connectors/"><strong>Connector</strong></a></p>
       </td>
-      <td align="center" valign="top"></td>
+      <td align="center" valign="top">
+        <p><a href="internet-of-things/"><strong>Internet of Things</strong></a></p>
+      </td>
       <td align="center" valign="top"></td>
       <td align="center" valign="top"></td>
     </tr>
