--- a/tools/internet-of-things/index.html
+++ b/tools/internet-of-things/index.html
@@ -1,12 +1,12 @@
 ---
 layout: page
-title: 'Media Types'
+title: 'Internet of Things API Deployment'
 ---
-<h1>Media Types</h1>
-<p>These are the media types that I am tracking on as part of my research, and can be used as part of the API life cycle.</p>
+<h1>Internet of Things API Deployment</h1>
+<p>These are the Internet of Things related API deployment solutions that I am tracking on as part of my research, and can be used as part of the API life cycle.</p>
 <table width="100%" border="0">
   {% for tool in site.data.tools %}
-    {% if tool.tags contains 'Media Type' %}
+    {% if tool.tags contains 'Internet of Things' %}
     <tr>
       <td align="center" valign="middle" width="160">
         <a href="{{ tool.url }}"><img src="{{ tool.logo }}" width="150" align="left" style="padding: 15px;" /></a>
