--- a/tools/real-time/index.html
+++ b/tools/real-time/index.html
@@ -1,12 +1,12 @@
 ---
 layout: page
-title: 'API Definition Mergers'
+title: 'Real Time API Deployment'
 ---
-<h1>API Definition Mergers</h1>
-<p>These are the API definition mergers that I am tracking on as part of my research, and can be used as part of the API life cycle.</p>
+<h1>Real Time API Deployment</h1>
+<p>These are the real time API deployment solutions that I am tracking on as part of my research, and can be used as part of the API life cycle.</p>
 <table width="100%" border="0">
   {% for tool in site.data.tools %}
-    {% if tool.tags contains 'Merging' %}
+    {% if tool.tags contains 'Real Time' %}
     <tr>
       <td align="center" valign="middle" width="160">
         <a href="{{ tool.url }}"><img src="{{ tool.logo }}" width="150" align="left" style="padding: 15px;" /></a>
