--- a/tools/serverless/index.html
+++ b/tools/serverless/index.html
@@ -1,12 +1,12 @@
 ---
 layout: page
-title: 'API Definition Discovery Formats'
+title: 'Serverless API Deployment'
 ---
-<h1>API Definition Discovery Formats</h1>
-<p>These are the open source API definition discovery formats that I am tracking on as part of my research, and can be used as part of the API life cycle.</p>
+<h1>Serverless API Deployment</h1>
+<p>These are the serverless API deployment solutions I am tracking on as part of my research, and can be used as part of the API life cycle.</p>
 <table width="100%" border="0">
   {% for tool in site.data.tools %}
-    {% if tool.tags contains 'Discovery' %}
+    {% if tool.tags contains 'Serverless' %}
     <tr>
       <td align="center" valign="middle" width="160">
         <a href="{{ tool.url }}"><img src="{{ tool.logo }}" width="150" align="left" style="padding: 15px;" /></a>
