--- a/organizations/index.html
+++ b/organizations/index.html
@@ -5,82 +5,83 @@ title: API Deployment
 
 {% assign api = site.data.apis %}
 
-<h3>Cloud</h3>
-<p>These are a couple of valuable websites that can help guide you on your API design journey.</p>
-{% assign display_tag = "Cloud" %}
-{% include org-listing.html %}
 
 <h3>Database</h3>
-<p>These are the solutions that have emerged to help API providers with their API design efforts.</p>
+<p>Deploying APis with an emphasis on a database as the source for data and content.</p>
 {% assign display_tag = "Database" %}
 {% include org-listing.html %}
 
 <h3>Data</h3>
-<p>These are the solutions that have emerged to help API providers with their API design efforts.</p>
+<p>Focusing on open data, structured, and linked data API deploy solutions.</p>
 {% assign display_tag = "Data" %}
 {% include org-listing.html %}
 
+<h3>Cloud</h3>
+<p>A more general category of API deployment solutions that run in the cloud.</p>
+{% assign display_tag = "Cloud" %}
+{% include org-listing.html %}
+
 <h3>Bigco</h3>
-<p>An API design studio you can download for Windows or Mac environments, and work locally.</p>
+<p>I wanted a way to isolate the big companies who are jockeying for a piece of the action.</p>
 {% assign display_tag = "Bigco" %}
 {% include org-listing.html %}
 
 <h3>Gateway</h3>
-<p>These are some API service providers who just happen to have some nice API design features.</p>
+<p>The API deployment solutions that usually stand in front of yoru existing infrastructure.</p>
 {% assign display_tag = "Gateway" %}
 {% include org-listing.html %}
 
 <h3>Scraping</h3>
-<p>These are some API service providers who just happen to have some nice API design features.</p>
+<p>When you need to deploy an API from content that is scraped from other websites and sources.</p>
 {% assign display_tag = "Scraping" %}
 {% include org-listing.html %}
 
 <h3>Search</h3>
-<p>These are some API service providers who just happen to have some nice API design features.</p>
+<p>API deploy using search indexes, and other search-centric approaches to providing APis.</p>
 {% assign display_tag = "Scraping" %}
 {% include org-listing.html %}
 
 <h3>Framework</h3>
-<p>These are some API service providers who just happen to have some nice API design features.</p>
+<p>The API deployment frameworks, which will overlap with the open source tooling available in this research.</p>
 {% assign display_tag = "Scraping" %}
 {% include org-listing.html %}
 
 <h3>Serverless</h3>
-<p>These are some API service providers who just happen to have some nice API design features.</p>
+<p>API deployment solutions taking advantage of the latest approaches to serverless infrastructure.</p>
 {% assign display_tag = "Serverless" %}
 {% include org-listing.html %}
 
 <h3>Microservices</h3>
-<p>These are some API service providers who just happen to have some nice API design features.</p>
+<p>Jumping on the latest microservices bandwagon when planning your API deployment approach.</p>
 {% assign display_tag = "Microservices" %}
 {% include org-listing.html %}
 
 <h3>Containers</h3>
-<p>These are some API service providers who just happen to have some nice API design features.</p>
+<p>Deploying your APIs into containers, focusing on using containerized infrastructure for operation.</p>
 {% assign display_tag = "Containers" %}
 {% include org-listing.html %}
 
 <h3>Spreadsheets</h3>
-<p>These are some API service providers who just happen to have some nice API design features.</p>
+<p>Putting the data from spreadsheets to use by deploying APis that are connected to Google or Microsoft spreadsheets.</p>
 {% assign display_tag = "Spreadsheets" %}
 {% include org-listing.html %}
 
 <h3>Open Source</h3>
-<p>These are some API service providers who just happen to have some nice API design features.</p>
+<p>The API deployment solutions that offer an open source option, making API deployment a community thing.</p>
 {% assign display_tag = "Open Source" %}
 {% include org-listing.html %}
 
 <h3>Internet of Things</h3>
-<p>These are some API service providers who just happen to have some nice API design features.</p>
+<p>API deploy that is focused on providing APIs for use by IoT devices, or possibly APIs on the devices.</p>
 {% assign display_tag = "Internet of Things" %}
 {% include org-listing.html %}
 
 <h3>Webhooks</h3>
-<p>These are some API service providers who just happen to have some nice API design features.</p>
+<p>API deploy solutions in service of supporting webhook infrastructure, making things a two way street.</p>
 {% assign display_tag = "Webhooks" %}
 {% include org-listing.html %}
 
 <h3>Real Time</h3>
-<p>These are some API service providers who just happen to have some nice API design features.</p>
+<p>Allowing for real time APIs to be deployed from an existing API, or other common resource.</p>
 {% assign display_tag = "Real Time" %}
 {% include org-listing.html %}
