--- a/organizations/index.html
+++ b/organizations/index.html
@@ -21,9 +21,9 @@ title: API Deployment
 {% assign display_tag = "Cloud" %}
 {% include org-listing.html %}
 
-<h3>Bigco</h3>
-<p>I wanted a way to isolate the big companies who are jockeying for a piece of the action.</p>
-{% assign display_tag = "Bigco" %}
+<h3>Tech Giants<h3>
+<p>I wanted a way to isolate the tech giants who are jockeying for a piece of the action.</p>
+{% assign display_tag = "Bigcos" %}
 {% include org-listing.html %}
 
 <h3>Gateway</h3>
