--- a/guide/index.html
+++ b/guide/index.html
@@ -1,20 +1,23 @@
 ---
 layout: page
-title: API Evangelist Industry Guide To API Definitions
+title: API Evangelist Industry Guide To API Deployment
 ---
 
 <!-- Tools -->
 <section>
   <header class="main">
-    <h2>Industry Guide To API Definitions</h2>
+    <h2>Industry Guide To API Deployment</h2>
   </header>
 
-  <p><a href="http://apis.how/jxcvi8wng2" target="_blannk"><img style="padding: 15px;" src="http://kinlane-productions.s3.amazonaws.com/api_evangelist_site/blog/api_definitions_2017_03.png" alt="" width="40%" align="right" /></a></p>
-  <p>I keep an eye on over 70 areas of the API sector, trying to better understand how API providers are getting things done, and what services and tooling they are using, while also keeping my perspective as an API consumer--observing everything from the outside-in. The most important area of my research is <a href="http://definitions.apievangelist.com">API definitions</a>--where I pay attention to the specifications, schema, scopes, and other building blocks of the API universe.&nbsp;</p>
-  <p>The way my research works&nbsp;is that I keep an eye on the world of APIs through monitoring the social media, blogs, Github, and other channels of companies, organizations, institutions, and agencies doing interesting things with APIs. I curate information as I discover&nbsp;and learn across the API sector, then I craft stories for my blog(s). Eventually, all of this ends up being published <a href="http://apievangelist.com/blog/">to the main API Evangelist blog</a>, as well as <a href="http://apievangelist.com/">the 70+ individual areas of my research from definition to deprecation</a>.&nbsp;</p>
-  <p>For a couple years now I have also published a guide for the top areas of my research, including API <a href="http://definitions.apievangelist.com">definitions</a>, <a href="http://design.apievangelist.com">design</a>, <a href="http://deployment.apievangelist.com">deployment</a>, and <a href="http://management.apievangelist.com">management</a>. These guides have always been a complete snapshot of my research, but in 2017 I am rebooting them to be a more curated, summary of each area of my research. My API definition guide is now ready for prime time after receiving some feedback from my community, so I wanted to share with you.</p>
-  <p>I am versioning and managing all of my API industry guides using the Github repositories in which I publish each of my research areas, so you can comment on the API definition guide, and <a href="https://github.com/api-evangelist/definitions/issues">submit suggestions for future editions using the Github issues for the project.</a>&nbsp;My goal with this new edition of the API Evangelist API definition guide is to make it a community guide to the world of API definitions, schema, scopes. So please, let me know your thoughts--it is meant to be a community guide.</p>
-  <p>I am keeping my API definition guide available for free to the public. You can also <a href="https://gumroad.com/l/Wlwnk">purchase a copy via Gumroad if you'd like to support my work</a>--I depend on your support to pay the bills. I'm also funding this work through paid one page or two-page articles in future editions, as well as some sponsor blogs located on certain pages--let me know if you are interested in sponsoring. Thanks as always for your support, I hope my API definitions guide helps you better understand this important layer to the API universe, something that is touching almost every aspect of the API and software development life cycles.</p>
+  <p><a href="http://apis.how/luztdufwj0" target="_blank"><img src="/images/api-evangelist-api-deployment-guide-rectangular.png" alt="" width="25%" /></a></p>
+  <p>There are many different ways to actually deploy an API. If you are a larger, more established company, you probably have existing&nbsp;tools, services, and processes set forth by IT for deploying APIs. If you are a startup, your developers probably have their own frameworks, or possibly a cloud service they prefer using. <a href="http://apis.how/luztdufwj0">This guide looks to map out the world of API deployment</a>, and some of the common ways companies, organizations, institutions, and government agencies are deploying APIs in 2016.</p>
+  <p>This <a href="http://apis.how/luztdufwj0">API deployment guide</a> breaks out many of the common companies, and tools while also looking to identify some of the common building blocks employed by leading providers, in support of API deployment across organizations of all shapes and sizes. This research is conducted by API Evangelist and is the just aspect of a modern API lifecycle, one that includes over 50 stops, from API design to deprecation, with deployment being just one area you should be considering.</p>
+  <p>I work to update my guides regularly, and if purchase a copy, you'll get any updates to it for the next year. Every reader of API Evangelist guides helps support this research and enables the work to continue--thank you!</p>
+
+  <ul class="actions" style="text-align: center;">
+    <li><a href="http://apis.how/luztdufwj0" class="button big">Download Guide</a></li>
+    <li><a href="https://gum.co/Wlwnk" class="button big">Purchase Guide</a></li>
+  </ul>
 
   <div class="alert alert-success" role="alert">
     <center><a href="https://github.com/api-evangelist/definitions/issues">Submit Any Corrections or Suggestions via Github Issues</a></center>
