--- a/guide/index.html
+++ b/guide/index.html
@@ -16,7 +16,7 @@ title: API Evangelist Industry Guide To API Deployment
 
   <ul class="actions" style="text-align: center;">
     <li><a href="http://apis.how/luztdufwj0" class="button big">Download Guide</a></li>
-    <li><a href="https://gum.co/Wlwnk" class="button big">Purchase Guide</a></li>
+    <li><a href="https://gum.co/wERa" class="button big">Purchase Guide</a></li>
   </ul>
 
   <div class="alert alert-success" role="alert">
