--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ title: API Evangelist - Design
 
 		<ul class="actions" style="text-align: center;">
 			<li><a href="http://apis.how/luztdufwj0" class="button big">Download Guide</a></li>
-			<li><a href="https://gum.co/Wlwnk" class="button big">Purchase Guide</a></li>
+			<li><a href="https://gum.co/wERa" class="button big">Purchase Guide</a></li>
 		</ul>
 
 	</div>
