--- a/_posts/2014-04-09-the-role-of-scraping-in-api-deployment.html
+++ b/_posts/2014-04-09-the-role-of-scraping-in-api-deployment.html
@@ -9,13 +9,6 @@ image: https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-scraper.jpg
 <p>Scraping has been something I&rsquo;ve done since I first started working on the web. Sometimes you just need some data or a piece of content that isn't available in a machine readable format, and the only way is to get it scrape it off a web page.</p>
 <p>Scraping is widespread, but something very few individuals or companies will admit to doing. Just like writing scripts for pulling data from APIs, I write a lot of scripts that pull content and data from websites and RSS feeds. Even though I tend to write my own scripts for scraping, I&rsquo;ve been closely watching the new breed of scraping tools like Scraperwiki:</p>
 <table border="0" cellpadding="5" width="75%" align="center">
-<!--      
-<tr>
-<td align="center" colspan="2">
-<hr style="border: 1px solid #000; width:100%; text-align:center;" _mce_style="border: 1px solid #000; width: 100%; text-align: center;" />
-</td>
-</tr>
---> 	      
 <tbody>
 <tr>
 <td width="200" align="center" valign="top">
@@ -31,13 +24,6 @@ image: https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-scraper.jpg
 </table>
 <p>I was first attracted to Scraperwiki as a way to harvest Tweets, and further interested by their web and PDF extraction tools.  Scraperwiki has already been around for a while, founded back in 2010, and recently there is a new wave of scraping tools that have emerged:</p>
 <table border="0" cellpadding="5" width="75%" align="center">
-<!--      
-<tr>
-<td align="center" colspan="2">
-<hr style="border: 1px solid #000; width:100%; text-align:center;" _mce_style="border: 1px solid #000; width: 100%; text-align: center;" />
-</td>
-</tr>
---> 	      
 <tbody>
 <tr>
 <td width="200" align="center" valign="top">
@@ -62,16 +48,9 @@ image: https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-scraper.jpg
 </tbody>
 </table>
 <p>Kimono and Import.io provide scraping tools for anyone, even non-developers to scrape content from web pages, but also allow you to deploy an API from the content. While it is easy to deploy APIs using data and content from the other scraping providers I track on, the new breed of scraping services focus on API deployment as end-goal.</p>
-<p>At <a href="http://www.apistrategyconference.com/2014Amsterdam/index.php">API Strategy &amp; Practice in Amsterdam</a>, the final panel of the event was called &ldquo;<a href="https://www.youtube.com/watch?v=zhbm_MtSYlg">toward 1 million APIs</a>&rdquo;, and scraping came up as one possible way that we will get to APIs at this scale. Sometimes the stewards or owners of data just don&rsquo;t have the resources to deploy APIs, and the only way to deploy an API will be to scrape data and content and publish as web API--either internally or externally by 3rd party.</p>
+<p>At <a href="http://www.apistrategyconference.com/2014Amsterdam/index.php">API Strategy &amp; Practice in Amsterdam</a>, the final panel of the event was called <a href="https://www.youtube.com/watch?v=zhbm_MtSYlg">toward 1 million APIs</a>, and scraping came up as one possible way that we will get to APIs at this scale. Sometimes the stewards or owners of data just don&rsquo;t have the resources to deploy APIs, and the only way to deploy an API will be to scrape data and content and publish as web API--either internally or externally by 3rd party.</p>
 <p>I have a <a href="http://scraping.apievangelist.com/">research site setup to keep track of scraping news I come across, as well as any companies and tools I discover</a>. Beyond ScraperWiki, Kimono and Import.io I&rsquo;m watching these additional scraping services.</p>
 <table border="0" cellpadding="5" width="75%" align="center">
-<!--      
-<tr>
-<td align="center" colspan="2">
-<hr style="border: 1px solid #000; width:100%; text-align:center;" _mce_style="border: 1px solid #000; width: 100%; text-align: center;" />
-</td>
-</tr>
---> 	      
 <tbody>
 <tr>
 <td width="200" align="center" valign="top">
@@ -119,7 +98,7 @@ image: https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-scraper.jpg
 </td>
 <td align="left">
 <p><a style="color: #000; font-size: 24px; text-decoration: none;" href="http://promptcloud.com/" target="_blank"><strong>PromptCloud</strong></a></p>
-<p>PromptCloud opeartes on &ldquo;Data as a Service&rdquo; (DaaS) model and deals with large-scale data crawl and extraction, using cutting-edge technologies and cloud computing solutions (Nutch, Hadoop, Lucene, Cassandra, etc). Its proprietary software employs machine learning techniques to extract meaningful information from the web in desired format. These data could be from reviews, blogs, product catalogs, social sites, travel data&mdash;basically anything and everything on WWW. It&rsquo;s a customized solution over simply being a mass-data crawler, so you only get the data you wish to see. The solution provides both deep crawl and refresh crawl of the web pages in a structured format.</p>
+<p>PromptCloud opeartes on Data as a Service (DaaS) model and deals with large-scale data crawl and extraction, using cutting-edge technologies and cloud computing solutions (Nutch, Hadoop, Lucene, Cassandra, etc). Its proprietary software employs machine learning techniques to extract meaningful information from the web in desired format. These data could be from reviews, blogs, product catalogs, social sites, travel data&mdash;basically anything and everything on WWW. It&rsquo;s a customized solution over simply being a mass-data crawler, so you only get the data you wish to see. The solution provides both deep crawl and refresh crawl of the web pages in a structured format.</p>
 <div id="linkicons"><a id="home-icon" title="Website" href="http://promptcloud.com/" target="_blank"><img id="home-icon-img" style="margin-bottom: 5px; padding: 15px;" src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-home-icon.jpeg" alt="" width="40" /></a> <a id="twitter-icon" title="Twitter" href="https://twitter.com/promptcloud" target="_blank"><img id="twitter-icon-img" style="padding: 15px; margin-bottom: 3px;" src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-twitter-icon.png" alt="" width="45" /></a> <a id="github-icon" title="Github" href="https://github.com/promptcloud" target="_blank"><img id="github-icon-img" style="padding: 15px;" src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-github-icon.png" alt="" width="60" /></a></div>
 </td>
 </tr>
