--- a/index.html
+++ b/index.html
@@ -136,6 +136,13 @@ title: API Evangelist - Deployment
 				<div class="content">
 					<h3><a href="{{ organization.url }}" target="_blank">{{ organization.name }}</a></h3>
 					<p>{{ organization.description }}</p>
+					<p>
+						{% for tag in organization.tags %}
+							{% if tag != 'Github' %}
+									{{ tag }}{% if forloop.last == false %}, {% endif %}
+							{% endif %}
+						{% endfor %}
+					</p>
 					<ul class="icons">
 						<li><a href="{{ organization.url}}" class="icon fa-home"><span class="label">Home</span></a></li>
 						{% if organization.twitter != '' %}
